<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 Breno Marques

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  - Navigation Drawer Header, Menu principal                                                   -
  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_note_vision"
            android:icon="@drawable/ic_note_vision_black"
            android:title="@string/nav_notes_vision" />
    </group>

    <group
        android:id="@+id/menu_ai_nodels"
        android:checkableBehavior="none"
        >
        <item
            android:id="@+id/nav_ai_inputs"
            android:icon="@drawable/ic_input_model_black"
            android:title="@string/nav_inputs_model" />

        <item
            android:id="@+id/nav_ai_analysis"
            android:icon="@drawable/ic_analysis_model_black"
            android:title="@string/nav_analysis_model" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
            <item
                android:id="@+id/nav_user_log_off"
                android:icon="@drawable/ic_log_off_white"
                android:title="@string/nav_log_off" />
    </group>
</menu>
