<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 Breno Marques

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  - Layout para Inclusão de um Note Vision {@see br.com.brolam.cloudvision.ui.NoteVisionActiv}  -
  - Capturar blocos de textos via camera fotográfica.                                          -
  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentNoteVisionCamera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.brolam.cloudvision.ui.NoteVisionActivity">

    <br.com.brolam.cloudvision.ui.camera.CameraSourcePreview
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <br.com.brolam.cloudvision.ui.camera.GraphicOverlay
            android:id="@+id/graphicOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </br.com.brolam.cloudvision.ui.camera.CameraSourcePreview>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabFlashOnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="onClick"
            app:srcCompat="@drawable/ic_on_flash_white"
            android:contentDescription="@string/talk_back_camera_flash_on"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCameraPlayStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="onClick"
            app:srcCompat="@drawable/ic_pause_camera_white"
            android:contentDescription="@string/talk_back_camera_pause"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="onClick"
            app:srcCompat="@drawable/ic_add_white"
            android:contentDescription="@string/note_vision_add"/>
    </LinearLayout>

</RelativeLayout>
